--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -7,7 +7,7 @@ Jon Brock - JPB2210
   - [Problem \#3](#problem-3)
   - [Bonus Content](#bonus-content)
 
-> *“Die Grenzen meiner Sprache bedeuten die Grenzen meiner Welt.”" -
+> *“Die Grenzen meiner Sprache bedeuten die Grenzen meiner Welt.” -
 > Ludwig Wittgenstein, Tractatus Logico-Philosophicus*
 
 ``` r
@@ -33,11 +33,16 @@ Given how massive the dataset is for this problem, we are going to pull
 it from the `p8105.datasets` library and assign it as the `instacart`
 tibble, as well as remove an unnecessary column `eval_set`.
 
+*Note: Despite the instructions to load the `instacart` dataset via
+`library(p8105.datasets)` I opted to use an equivalent method to which I
+am partial. I hope this does not result in any lost points.*
+
 ``` r
-#CODE CHUNK COMPLETED
 instacart <- as_tibble(p8105.datasets::instacart) %>% 
     select(-eval_set)
 ```
+
+-----
 
 The dataset `instacart` has 14 variables. There are variables that are
 specific to the items, such as `product_id`, `department`,
@@ -47,7 +52,6 @@ to the consumer, such as `reordered`, `user_id`,
 unique customers.
 
 ``` r
-#CODE CHUNK COMPLETED
 instacart %>% 
     group_by(aisle) %>% 
     summarise(aisle_count = n()) %>% 
@@ -78,10 +82,12 @@ the top five aisles from which items are ordered are:
 4.  yogurt  
 5.  packaged cheese
 
-<!-- end list -->
+-----
+
+We can get a graphical representation of the top aisles ordered from
+using the following code and interpreting the generated graphic.
 
 ``` r
-#CODE CHUNK COMPLETED
 instacart %>%
     group_by(aisle) %>% 
     summarize(aisle_count = n()) %>% 
@@ -96,6 +102,8 @@ instacart %>%
 
 <img src="p8105_hw3_jpb2210_files/figure-gfm/instacart_aisle_plot-1.png" style="display: block; margin: auto;" />
 
+-----
+
 The following code chunk involves several steps, so I assigned it to its
 own tibble (`insta_top_product_tbl`). We sought to find the most ordered
 item from three specified aisles: `baking ingredients`, `dog food care`,
@@ -103,7 +111,6 @@ and `packaged vegetables fruits`. As such, this particular code chunk
 merely prepares us for generating the required table.
 
 ``` r
-#CODE CHUNK COMPLETED (TIME PERMITTING, SEE IF YOU CAN CLEAN IT UP A LITTLE)
 insta_top_product_tbl <-
     instacart %>% 
     select(aisle, product_name) %>% 
@@ -135,37 +142,42 @@ insta_top_product_tbl %>%
 | dog food care              | organix grain free chicken & vegetable dog food |                      14 |
 | packaged vegetables fruits | organic baby spinach                            |                    3324 |
 
-STEPS (NOT IN ORDER): Variables needed for this: product\_name,
-order\_dow, order\_hour\_of\_day GROUP BY ‘order\_dow’ for the days of
-week AS.FACTOR ‘order\_dow’ / relevel the variable to be days of week
-FILTER == “Pink Lady Apples” and “Coffee Ice Cream” Calculate the mean
-value of ‘hour\_of"day’ CREATE knitr::kable table
+-----
+
+Next, we want to know what the mean hour time is for when customers
+purchase either `Pink Lady Apples` or `Coffee Ice Cream` – yummy\!
 
 ``` r
 instacart %>% 
     select(product_name, order_dow, order_hour_of_day) %>% 
     filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
-    mutate(dow = wday(order_dow, label = TRUE, abbr = FALSE)) %>% 
+    mutate(
+        order_dow = order_dow + 1,
+        dow = wday(order_dow, label = TRUE, abbr = FALSE)) %>% 
     group_by(product_name, dow) %>% 
     arrange(product_name, dow) %>% 
     select(product_name, dow, everything()) %>% 
-    summarize(mean(order_hour_of_day)) %>% 
+    summarize(
+        mean_hour = as.integer(mean(order_hour_of_day))) %>% 
     pivot_wider(
         names_from = "dow",
-        values_from = "mean(order_hour_of_day)") %>% 
-    knitr::kable()
+        values_from = "mean_hour") %>% 
+    rename("Product" = product_name) %>% 
+    knitr::kable(align = 'c')
 ```
 
-    ## Warning: Factor `dow` contains implicit NA, consider using
-    ## `forcats::fct_explicit_na`
-    
-    ## Warning: Factor `dow` contains implicit NA, consider using
-    ## `forcats::fct_explicit_na`
+|     Product      | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday |
+| :--------------: | :----: | :----: | :-----: | :-------: | :------: | :----: | :------: |
+| Coffee Ice Cream |   13   |   14   |   15    |    15     |    15    |   12   |    13    |
+| Pink Lady Apples |   13   |   11   |   11    |    14     |    11    |   12   |    11    |
 
-| product\_name    |   Sunday |   Monday |  Tuesday | Wednesday | Thursday |   Friday |       NA |
-| :--------------- | -------: | -------: | -------: | --------: | -------: | -------: | -------: |
-| Coffee Ice Cream | 14.31579 | 15.38095 | 15.31818 |  15.21739 | 12.26316 | 13.83333 | 13.77419 |
-| Pink Lady Apples | 11.36000 | 11.70213 | 14.25000 |  11.55172 | 12.78431 | 11.93750 | 13.44118 |
+Our findings are presented in 24-hour time, which is a terribly
+underutilized method of time keeping. There can never be any ambiguity\!
+None of this, “I set my alarm for 7:00 p.m. instead of 7:00 a.m., and
+that’s why I’m late for work” nonsense. 19:00 is 19:00. Bam\! Anyway, I
+digress. Our data indicate that around the middle of the week customers
+tend to order `Coffee Ice Cream` around 15:00, whereas `Pink Lady
+Apples` are typically ordered around 11:00 during the week.
 
 -----
 
