--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -197,6 +197,9 @@ reordered factors going from `"Poor"` to "`Excellent"`.
 `Fair`, `Good`, `Very good`, **or** `Excellent` **within each county and
 state.**
 
+*Note: Again, I loaded the dataset `brfss_smart2010` using the same
+process as I did in Problem \#1.*
+
 ``` r
 #CODE CHUNK COMPLETED
 brfss <- as_tibble(p8105.datasets::brfss_smart2010) %>% 
@@ -233,8 +236,78 @@ into its two requisite parts: `lat` and `lng`. Though, I do see that for
 some observations, the last digit of the longitude value is truncated.
 It maps the same location regardless.)
 
+-----
+
+The following code answers the question: “In **2002**, which states were
+observed at 7 or more locations?”
+
 ``` r
 #CODE CHUNK COMPLETED
+brfss %>% 
+    filter(year == "2002") %>% 
+    group_by(state) %>%
+    summarize(locations = n_distinct(county)) %>% 
+    filter(locations >= 7)
+```
+
+    ## # A tibble: 6 x 2
+    ##   state locations
+    ##   <chr>     <int>
+    ## 1 CT            7
+    ## 2 FL            7
+    ## 3 MA            8
+    ## 4 NC            7
+    ## 5 NJ            8
+    ## 6 PA           10
+
+The answer: `CT` (Connecticut), `FL` (Florida), `MA` (Massachusetts),
+`NC` (North Carolina), `NJ` (New Jersey), and `PA` (Pennsylvania).
+
+-----
+
+The following code answers the question: “In **2010**, which states were
+observed at 7 or more locations?”
+
+``` r
+#CODE CHUNK COMPLETED
+brfss %>% 
+    filter(year == "2010") %>% 
+    group_by(state) %>%
+    summarize(locations = n_distinct(county)) %>% 
+    filter(locations >= 7)
+```
+
+    ## # A tibble: 14 x 2
+    ##    state locations
+    ##    <chr>     <int>
+    ##  1 CA           12
+    ##  2 CO            7
+    ##  3 FL           41
+    ##  4 MA            9
+    ##  5 MD           12
+    ##  6 NC           12
+    ##  7 NE           10
+    ##  8 NJ           19
+    ##  9 NY            9
+    ## 10 OH            8
+    ## 11 PA            7
+    ## 12 SC            7
+    ## 13 TX           16
+    ## 14 WA           10
+
+The answer: `CA` (California), `CO` (Colorado), `FL` (Florida), `MA`
+(Massachusetts), `MD` (Maryland), `NC` (North Carolina), `NE`
+(Nebraska), `NJ` (New Jersey), `NY` (New York), `OH` (Ohio), `PA`
+(Pennsylvania), `SC` (South Carolina), `TX` (Texas), and `WA`
+(Washington – **my home state\!**).
+
+-----
+
+The following code generates a plot that shows the time trends of the
+percent of people within each state responding with `Excellent` when
+asked how they perceive their overall health.
+
+``` r
 brfss %>% 
     filter(response == "Excellent") %>% 
     group_by(year, state) %>% 
@@ -251,6 +324,48 @@ brfss %>%
 ```
 
 <img src="p8105_hw3_jpb2210_files/figure-gfm/brfss_plot_1-1.png" style="display: block; margin: auto;" />
+
+As we can see from the generated graphic, the mean percentage of people
+indicating `Excellent` overall health across all US states falls between
+\~12% at the lowest point and \~29% at the highest. However, there is a
+high density of mean percentages that fall between 17.5% and 27.5%. Come
+on, America, we can do better\!
+
+-----
+
+The following code generates comparative plots (by years `2006` and
+`2010`) for the five responses (`Poor` to `Excellent`) distribution
+among locations in NY State.
+
+``` r
+brfss %>% 
+    mutate(county = str_to_title(county)) %>% 
+    filter(
+        year %in% c(2006, 2010),
+        state == "NY") %>% 
+        group_by(year, county) %>%
+    ggplot(aes(x = response, y = data_value_pct, fill = county)) + 
+    geom_col(position = "dodge") + 
+    facet_grid(. ~ year) +
+    viridis::scale_fill_viridis(
+        option = "cividis",
+        name = "county",
+        discrete = TRUE) +
+    labs(
+        title = "Levels of 'Overall Health' Differences by NY County",
+        subtitle = "*Bronx, Erie, and Monroe counties included in 2010 only",
+        x = "Response Categories",
+        y = "Percentage of Sampled Individuals' Response Selection") +
+    theme(legend.position = "bottom")
+```
+
+<img src="p8105_hw3_jpb2210_files/figure-gfm/brfss_plot_2-1.png" style="display: block; margin: auto;" />
+
+It’s important for us to note that Bronx, Erie, and Monroe counties were
+not included in the 2006 data. However, we see from 2006 to 2010, the
+rates of individuals indicating that they had `Very good` overall health
+rose significantly for all counties included in both years. This is
+especially evident for Westchester and Nassau counties.
 
 -----
 
