--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -379,6 +379,34 @@ especially evident for Westchester and Nassau counties.
 accel_data <- read_csv("./data/accel_data.csv")
 ```
 
+``` r
+accel_data %>% 
+    pivot_longer(
+        activity.1:activity.1440,
+        names_to = "activity",
+        values_to = "activity_count") %>% 
+    mutate(
+        day_type = case_when(
+            day %in% c("Saturday", "Sunday") ~ "weekend",
+            TRUE ~ "weekday")) %>% 
+    group_by(day_id) %>% 
+    summarize(day_total = sum(activity_count)) %>% 
+    pivot_wider(
+        names_from = day_id,
+        values_from = day_total)
+```
+
+    ## # A tibble: 1 x 35
+    ##      `1`    `2`    `3`    `4`    `5`    `6`    `7`    `8`    `9`   `10`
+    ##    <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>
+    ## 1 4.81e5 78828. 376254 631105 3.56e5 3.07e5 3.40e5 568839 295431 607175
+    ## # … with 25 more variables: `11` <dbl>, `12` <dbl>, `13` <dbl>,
+    ## #   `14` <dbl>, `15` <dbl>, `16` <dbl>, `17` <dbl>, `18` <dbl>,
+    ## #   `19` <dbl>, `20` <dbl>, `21` <dbl>, `22` <dbl>, `23` <dbl>,
+    ## #   `24` <dbl>, `25` <dbl>, `26` <dbl>, `27` <dbl>, `28` <dbl>,
+    ## #   `29` <dbl>, `30` <dbl>, `31` <dbl>, `32` <dbl>, `33` <dbl>,
+    ## #   `34` <dbl>, `35` <dbl>
+
 -----
 
 ## Bonus Content
